--- a/WPF/Desktop/Views/TouristMainWindow.xaml
+++ b/WPF/Desktop/Views/TouristMainWindow.xaml
@@ -4,12 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="TouristMainWindow" Height="1080" Width="1920"
+        Title="TouristMainWindow"
         WindowStartupLocation="CenterScreen">
     <Window.Resources>
-        <BitmapImage x:Key="HomeIcon" UriSource="../../Resources/Images/home.png"/>
-        <BitmapImage x:Key="CouponIcon" UriSource="../../Resources/Images/Icons/coupon.png"/>
-        <BitmapImage x:Key="ReservationsIcon" UriSource="../../Resources/Images/reservations.png"/>
+        <BitmapImage x:Key="HomeIcon" UriSource="../../../Resources/Images/home.png"/>
+        <BitmapImage x:Key="CouponIcon" UriSource="../../../Resources/Images/Icons/coupon.png"/>
+        <BitmapImage x:Key="ReservationsIcon" UriSource="../../../Resources/Images/reservations.png"/>
         <Style TargetType="Image" x:Key="IconStyle">
             <Setter Property="Width" Value="50"/>
             <Setter Property="Margin" Value="30, 0"/>
@@ -55,6 +55,14 @@
                     <WrapPanel>
                         <Image Source="{StaticResource CouponIcon}" Style="{StaticResource IconStyle}"/>
                         <TextBlock Text="Coupons"/>
+                    </WrapPanel>
+                </Button>
+                <Button x:Name="RequestsButton"
+                        Click="RequestsButton_Click"
+                        Style="{StaticResource ButtonStyle}">
+                    <WrapPanel>
+                        <Image Source="{StaticResource ReservationsIcon}" Style="{StaticResource IconStyle}"/>
+                        <TextBlock Text="Requests"/>
                     </WrapPanel>
                 </Button>
                 <Button x:Name="NotificationsButton"
